fix: fix task message overflow

--- a/src/assets/scss/components/_task-card.scss
+++ b/src/assets/scss/components/_task-card.scss
@@ -50,6 +50,9 @@
         background-color: #e8e5e5;
         border-radius: 5px;
         padding: 10px;
+        word-break: break-word;
+        max-height: 300px;
+        overflow-y: auto;
     }
 
     &__chip {
